--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -1,16 +1,20 @@
-<!--index.wxml-->
-  <!--CARDS-->
+ <!--CARDS-->
   <!--- below is to be added in when clicked on  -->
   <!--- <view wx:for="{{machines}}" wx:for-item="machine" class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('{{machine.image}}');" bindtap='onClick' data-id="{{machine.id}}"> --->
 
-  <view class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-    <view class="image-title-container"> 
-      <!--avatar-->
-      <view class="card-user" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');"></view>
-      <!--machine name -->
-      <view class="machine-name">{{machine.name}}Machine name</view>
-    </view>
-      <!--price-->
-      <text class="machine-price">{{machine.price}}Price</text>
-  </view>
+
+<view wx:for="{{machines}}" wx:for-item="machine" >
+      <view class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
+          <view class="card-description">
+              <!--machine name -->
+              <view class="h2">{{machine.name}}</view>
+              <!--price-->
+              <text class="p">{{machine.price}}Price</text>
+              <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');"></view>
+        </view>
+      </view>
+</view>
+
+
+
 
