--- a/pages/main/main.wxss
+++ b/pages/main/main.wxss
@@ -1,4 +1,3 @@
-/* pages/main/main.wxss */
 /**card info**/
 .card {
   height: 175px;
@@ -10,30 +9,36 @@
   border-radius: 6px;
   margin: 20px;
 }
-.card-user {
+.avatar {
+  position: absolute;
+  left: 10px;
+  top: 10px;
   width: 100rpx;
   height: 100rpx;
   border-radius: 50%;
   border: 3px solid white;
 }
 
-.image-title-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 20px;
-}
-
-.machine-name {
+ .card-description .h2 {
   font-size: 16px;
-  margin-top: 10px;
+  padding: 15px;
+  position: absolute;
+  top: 50px;
 }
-
-.machine-price {
+.card-description .p {
   font-size: 14px;
   position: absolute;
   bottom: 10px;
   right: 10px;
   padding: 10px;
 }
-
+.card-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  z-index: 2;
+  background: black;
+  opacity: 0;
+}
