--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,2 +1,10 @@
 <!--pages/show/show.wxml-->
-<text>pages/show/show.wxml</text>
+
+
+<!--image of washing machine-->
+
+ <view class="image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
+  </view>
+
+<!--Avatar-->
+  <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');"></view>
