--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -1,1 +1,19 @@
 /* pages/show/show.wxss */
+
+.image {
+  height: 150px;
+  background-size: cover !important;
+  background-position: center;
+  color: white;
+  position: relative;
+  border-radius: 6px;
+  margin: 20px;
+}
+
+.avatar {
+  width: 150rpx;
+  height: 150rpx;
+  border-radius: 50%;
+  border: 1px solid white;
+  margin: 20px;
+}
