--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,10 +1,14 @@
 <!--pages/show/show.wxml-->
 
-
 <!--image of washing machine-->
-
  <view class="image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
   </view>
 
 <!--Avatar-->
   <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');"></view>
+
+<!--Book button made with wechat default -->
+  <view class="book-button" >
+    <button type="primary" size="{{primarySize}}" loading="{{loading}}" plain="{{plain}}"
+        disabled="{{disabled}}" bindtap="primary">Book          </button>
+  </view>
