--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -11,15 +11,49 @@
 }
 
 .avatar {
-  width: 150rpx;
-  height: 150rpx;
+  width: 130rpx;
+  height: 130rpx;
   border-radius: 50%;
-  border: 1px solid white;
   margin: 20px;
+  position: absolute;
+  right: 10px;
+  top: 175px;
+
 }
 
+.machine-info {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.machine-info .machine-name {
+  font-weight: bold;
+  font-size: 20px;
+   padding: 5px;
+
+}
+
+.machine-info .machine-type {
+  font-size: 13px;
+  padding: 5px;
+}
+
+.machine-info .machine-description {
+  font-size: 13px;
+  font-weight: lighter;
+  padding: 5px;
+}
+
+.price {
+  font-size: 20px;
+  position: absolute;
+  right: 120px;
+
+}
 .book-button {
   width: 280px;
   padding: 0 20px;
-  color: #27AE60
-  }
+  position: absolute;
+  bottom: 56px;
+}
