--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -1,14 +1,20 @@
  <!--CARDS-->
-<view wx:for="{{machines}}" wx:for-item="machine" >
-      <view class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-          <view class="card-description">
+<view class="cards">
+  <view wx:for="{{machines}}" wx:for-item="machine" >
+    <view class="card">
+          <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
+              <view class="card-description">
               <!--machine name -->
               <view class="h2">{{machine.name}}</view>
-              <!--price-->
-              <text class="p">{{machine.price}}Price</text>
               <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');"></view>
-        </view>
+              </view>
+              <view class="card-footer">
+            <!--price-->
+            <text class="price">{{machine.price}}</text>
+              </view>
+          </view>
       </view>
+    </view>
 </view>
 
 
