--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -1,7 +1,7 @@
  <!--CARDS-->
 <view class="cards">
   <view wx:for="{{machines}}" wx:for-item="machine" >
-    <view class="card">
+    <view class="card" bindtap='goToShowPage'>
           <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
               <view class="card-description">
               <!--machine name -->
@@ -16,6 +16,8 @@
       </view>
     </view>
 </view>
+
+
 
 
 
