--- a/pages/main/main.wxss
+++ b/pages/main/main.wxss
@@ -8,6 +8,7 @@
   position: relative;
   border-radius: 6px;
   margin: 20px;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
 }
 
 .avatar {
@@ -37,6 +38,13 @@
   color: white;
   font-weight: bold;
 }
+
+.card-footer {
+  background-color: white;
+}
+
+
+
 
 /* .add-button {
   width: 50px;
