--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -8,6 +8,7 @@
   color: white;
   position: relative;
   border-radius: 6px;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
 }
 
 .avatar {
@@ -28,7 +29,7 @@
 }
 
 .machine-info .machine-name {
-  font-weight: bold;
+  font-weight: bolder;
   font-size: 22px;
    padding: 5px;
 
@@ -47,9 +48,8 @@
 
 .price {
   font-size: 20px;
-  font-weight: bold;
+  font-weight: bolder;
   padding: 15px;
-  margin-right: 12px;
 }
 
 .per-night {
@@ -65,12 +65,12 @@
 
 .book-button {
   background-color: #27AE60;
-  width: 150px;
+  width: 140px;
   border-radius: 18px;
   text-align: center;
-  padding: 10px;
+  padding: 9px;
   color: white;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: bold;
   margin: 15px;
   opacity: 0.9;
