--- a/pages/new/new.wxss
+++ b/pages/new/new.wxss
@@ -3,7 +3,7 @@
   margin-left: 8px;
   text-align:center;
 }
-.img-btn {
+.btn-upload {
   margin-bottom:15px;
 }
  .form-fields {
@@ -12,7 +12,10 @@
 .btn-submit {
 margin-bottom:8px;
 color:white;
+font-size: 13px;
+font-weight: bold;
 }
+
 .desc {
   border: 2px solid rgb(240,240,240);
   margin-bottom:15px;
