--- a/pages/new/new.wxml
+++ b/pages/new/new.wxml
@@ -2,17 +2,17 @@
 <view class="h1">Add Your Washing Machine</view>
 <view class="form-fields">
 <form bindsubmit="bindSubmit" bindreset="formReset">
-  <input value="{{ name }}" class="desc" name="name" placeholder="Enter A Name" />
-  <input value='{{ description }}' class="desc" name="description" placeholder="Enter A Description" />
+  <input value="{{ name }}" class="desc" name="name" placeholder="Enter a Name" />
+  <input value='{{ description }}' class="desc" name="description" placeholder="Enter a Description" />
 <input value='{{ socks }}' class="desc" name="socks" placeholder="Enter How Many Socks Eaten" />
-<input value='{{ address }}' class="desc" name="address" placeholder="Enter Your Address" />
+<input value='{{ address }}' class="desc" name="address" placeholder="Enter your Address" />
 
 <input value='{{ price }}' class="desc" name="price" placeholder="Daily Rate in $$$" />
 
-<input value='{{ availability }}' class="desc" name="availability" placeholder="Days Available" />
+<input value='{{ availability }}' class="desc" name="availability" placeholder="Days available" />
 
   <button class="btn-upload" formType="submit">Upload an Image</button>
 
-  <button class="btn-submit" formType="submit">Submit</button>
+  <button class="btn-submit" formType="submit">Save</button>
 </form>
 </view>
