--- a/pages/main/main.wxss
+++ b/pages/main/main.wxss
@@ -1,4 +1,3 @@
-
 /**card info**/
 .card {
   display: flex;
@@ -9,7 +8,6 @@
   border-radius: 6px;
 
 }
-
 .card-body {
   height: 80%;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
@@ -38,18 +36,27 @@
   font-weight: bold;
 }
 
-.card-footer .price {
+.card-footer .sock_count {
   font-size: 14px;
   padding: 8px;
   color: #808080;
-  display: flex;
-  justify-content: flex-end;
   }
 
 .card-footer {
   background-color: white;
   height: 20%;
   border-radius: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center
+
+}
+
+.card-footer .price {
+font-size: 14px;
+  padding: 8px;
+  color: #808080;
+
 }
 
 .title {
