--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,6 +12,6 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
-  <button bindtap='goMachine'>Go Machine</button>
+  <button bindtap='goMachine'>Create a Monster</button>
 </view>
 
