made show page responsive for different screens and changed cards

--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -1,6 +1,6 @@
-<view class="title">
+<!-- <view class="title">
   <text>Sock Monster Selection</text>
-</view>
+</view> -->
 
  <!--CARDS-->
 <view class="cards">
@@ -9,15 +9,14 @@
           <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
               <view class="card-description">
               <!--machine name -->
+              <!--price-->
+              <text class="price">${{machine.price}}/day</text>
               <view class="h2">{{machine.name}}</view>
-              <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');"></view>
+              <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/users/tgenaitay');"></view>
               </view>
              
           </view>
              <view class="card-footer">
-              <!--price-->
-              <text class="price">${{machine.price}}/day</text>
-
               <text class='sock_count'>I've eaten {{machine.sock_count}} socks</text>
             </view>
       </view>
