--- a/pages/new/new.wxml
+++ b/pages/new/new.wxml
@@ -1,18 +1,19 @@
 <!--pages/new/new.wxml-->
-<view class="h1">Add Your Washing Machine</view>
-<view class="form-fields">
-<form bindsubmit="bindSubmit" bindreset="formReset">
-  <input value="{{ name }}" class="desc" name="name" placeholder="Enter a Name" />
-  <input value='{{ description }}' class="desc" name="description" placeholder="Enter a Description" />
-<input value='{{ socks }}' class="desc" name="socks" placeholder="Enter How Many Socks Eaten" />
-<input value='{{ address }}' class="desc" name="address" placeholder="Enter your Address" />
+<view class="h1">Add Your Sock Monster</view>
 
-<input value='{{ price }}' class="desc" name="price" placeholder="Daily Rate in $$$" />
+  <view class="form-fields">
+    <form bindsubmit="bindSubmit" bindreset="formReset">
+      <input value="{{ name }}" class="desc" name="name" placeholder="Enter a Name" />
+      <input value='{{ description }}' class="desc" name="description" placeholder="Enter a Description" />
+    <input value='{{ socks }}' class="desc" name="socks" placeholder="Enter How Many Socks Eaten" />
+    <input value='{{ address }}' class="desc" name="address" placeholder="Enter your Address" />
 
-<input value='{{ availability }}' class="desc" name="availability" placeholder="Days available" />
+    <input value='{{ price }}' class="desc" name="price" placeholder="Daily Rate in $$$" />
 
-  <button class="btn-upload" formType="submit">Upload an Image</button>
+    <input value='{{ availability }}' class="desc" name="availability" placeholder="Days available" />
 
-  <button class="btn-submit" formType="submit">Save</button>
-</form>
-</view>
+      <button class="btn-upload" formType="submit">Upload an Image</button>
+
+      <button class="btn-submit" formType="submit">Save</button>
+    </form>
+  </view>
