--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -1,2 +1,64 @@
 <!--pages/profile/profile.wxml-->
-<text>pages/profile/profile.wxml</text>
+
+<view class="avatar-name">
+  <!-------AVATAR------------->
+  <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/users/tgenaitay');"></view>
+  <!-------Name------------->
+    <view class="name">Name 
+    </view>
+  </view>
+
+    <!------tabbar------------->
+      <view class="tabs">
+        <view class="tab active">
+          <h1>My Bookings</h1>
+        </view>
+        <view class="tab">
+          <h1>My Reservations</h1>
+        </view>
+      </view>
+
+        <!------cards------------->
+    <view class="cards">
+      <view class="card" bindtap='showMachine' data-id="{{machine.id}}">
+        <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
+          <view class="card-description">
+          <!--machine name -->
+            <view class="h2">{{machine.name}}</view>
+          </view>
+        </view>
+          <view class="card-footer">
+            <text class='name'>INFORMATION</text>
+            <text class="status-pending">Pending</text>
+          </view>
+      </view>
+
+      <view class="card" bindtap='showMachine' data-id="{{machine.id}}">
+        <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
+          <view class="card-description">
+          <!--machine name -->
+            <view class="h2">{{machine.name}}</view>
+          </view>
+        </view>
+          <view class="card-footer">
+            <text class='name'>INFORMATION</text>
+            <text class="status-approved">Approved</text>
+          </view>
+      </view>
+
+            <view class="card" bindtap='showMachine' data-id="{{machine.id}}">
+        <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
+          <view class="card-description">
+          <!--machine name -->
+            <view class="h2">{{machine.name}}</view>
+          </view>
+        </view>
+          <view class="card-footer">
+            <text class='name'>INFORMATION</text>
+            <text class="status-denied">Denied</text>
+          </view>
+      </view>
+
+    </view>
+            
+              
