--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -1,1 +1,136 @@
 /* pages/profile/profile.wxss */
+
+.avatar {
+  width: 220rpx;
+  height: 220rpx;
+  border-radius: 50%;
+}
+
+.name {
+  font-size: 28px;
+  padding: 19px;
+  color: #484848;
+}
+
+.avatar-name {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 39px;
+ }
+
+ .tabs {
+  display: flex;
+  padding: 10px 10px 0 10px;
+  color: #484848;
+  margin-bottom: 9%;
+}
+
+.tab {
+  flex: 0 0 50%;
+  text-align: center;
+}
+
+.tab .active {
+  border-bottom: 2px solid #8DC9B8;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  margin: 19px;
+  height: 30vh;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+  border-radius: 6px;
+  position: relative;
+
+}
+.card-body {
+  height: 80%;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  background-size: cover !important;
+  background-position: center;
+  color: white;
+  position: relative;
+  border-radius: 6px 6px 0 0;
+}
+
+.pending-button {
+  height: 9vh;
+  width: 9vh;
+  border-radius: 50%;
+  border: 2px solid white;
+  position: absolute;
+  right: 16%;
+  top: 79%;
+  color: white;
+  font-size: 14px;
+  background-color: #F2994A;
+}
+
+.approved-button {
+  background-color: #27AE60;
+  height: 9vh;
+  width: 9vh;
+  border-radius: 50%;
+  border: 2px solid white;
+  position: absolute;
+  right: 16%;
+  top: 79%;
+  color: white;
+  font-size: 14px;
+}
+
+
+
+
+ .card-description .h2 {
+  font-size: 20px;
+  padding: 10px;
+  position: absolute;
+  top: 157px;
+  font-weight: bold;
+}
+
+.card-footer .name {
+  font-size: 14px;
+  padding: 14px;
+  /* color: #808080; */
+  color: #8DC9B8;
+  }
+
+.card-footer {
+  background-color: white;
+  height: 20%;
+  border-radius: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center
+}
+
+.card-footer .status-approved {
+  background-color: #27AE60;
+  border-radius: 5px;
+  color: white;
+  font-size: 14px;
+  padding: 3px;
+  margin: 14px;
+}
+
+.card-footer .status-denied {
+  background-color: #EB5757;
+  border-radius: 5px;
+  color: white;
+  font-size: 14px;
+  padding: 3px;
+  margin: 14px;
+}
+
+.card-footer .status-pending {
+  background-color: #F2994A;
+  border-radius: 5px;
+  color: white;
+  font-size: 14px;
+  padding: 3px;
+  margin: 14px;
+}
