--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -5,11 +5,6 @@
   <view class="image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
   </view>
 
-
-
-<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> -->
-
-
   <!--WASHING MACHINE INFO (name, address, type, avatar)------>
   <view class="machine-info"> 
       <view class="machine-name">
@@ -19,7 +14,7 @@
         <text>Washing Machine Type</text>
       </view>
       <view class="machine-address">
-          <text> <i class="fas fa-map-pin"></i>221b Baker Street, North London</text>
+          <text>221b Baker Street, North London</text>
       </view>
       <!--Avatar-->
       <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/users/tgenaitay');"></view>
