--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -19,6 +19,8 @@
   width: 220rpx;
   height: 220rpx;
   border-radius: 50%;
+  position: relative;
+  top : 70px;
 }
 
 .name {
@@ -26,6 +28,8 @@
   padding: 19px;
   color: #484848;
   font-weight: bold;
+  margin-top: 55px;
+
 }
 
 .avatar-name {
@@ -72,7 +76,7 @@
 
 .pending-button {
   height: 9vh;
-  width: 9vh;
+  width: 15vh;
   border-radius: 50%;
   border: 2px solid white;
   position: absolute;
