--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -15,7 +15,7 @@
     </block>
   </view>
 
-    <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" class="btn">Login</button>
-    <button bindtap='goMachine' class="btn">Create a Monster</button>
+    <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" class="btn">Create a Monster</button>
+    <!-- <button bindtap='goMachine' class="btn">Create a Monster</button> -->
   </view>
 
