--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -2,7 +2,7 @@
 <view class="cards">
   <block wx:for="{{machines}}" wx:for-item="machine" >
     <view class="card" bindtap='showMachine' data-id="{{machine.id}}">
-          <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
+          <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('{{machine.photo}}');">
               <view class="card-description">
               <!--machine name -->
               <!--price-->
