--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -3,7 +3,7 @@
 .weui-tab {
   position: relative;
   height: 100%;
-  top: 24px;
+  top: -61px;
   color: #484848;
 }
 
@@ -24,7 +24,7 @@
   padding: 19px;
   color: #484848;
   font-weight: bold;
-  margin-top: 55px;
+  margin: 20%;
 
 }
 
@@ -109,6 +109,7 @@
   padding: 14px;
   /* color: #808080; */
   color: #1D3557;
+  margin: 5%;
   }
 
 .card-footer {
