show images working

--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,7 +1,7 @@
 <!--pages/show/show.wxml-->
 <view class="container">
     <!--------------IMAGE of washing machine-------------------->
-    <view class="image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url{{photo}};">
+    <view class="image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('{{photo}}');">
     </view>
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> -->
     <!--WASHING MACHINE INFO (name, address, type, avatar)------>
@@ -35,7 +35,7 @@
 </view>
 <!---------------SOCK COUNT AND MESSAGE BUTTONS------------->
 <view class="green-buttons">
-  <view class="machine-sock-count">I've eaten {{sock_count}} socks</view>
+  <view class="machine-sock-count">I've Eaten {{sock_count}} Socks!</view>
 </view>
 <!----------DESCRIPTION---------------------->
 <view class="machine-description">
