--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -45,11 +45,14 @@
   border: 1px solid #1D3557;
   padding: 12px;
   font-size: 15px;
-  border-radius: 18px;
+  border-radius: 30px;
   margin: 15px 0px;
-  width: 38%;
+  width: 80%;
   text-align: center;
   color: #484848;
+  font-weight:600;
+  font-size:16px;
+
   /* position: absolute;
   top: 340px; */
 }
