--- a/pages/new/new.wxss
+++ b/pages/new/new.wxss
@@ -51,3 +51,13 @@ opacity: 0.9;
   width: 80%;
   margin: 20px;
 }
+
+.availability {
+  margin-bottom:15px;
+  padding: 5px;
+  font-size: 15px;
+  color: #999999;
+  border-bottom: 2px solid #F0F0F0;
+  width: 80%;
+  margin: 20px;
+}
