--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -44,7 +44,7 @@
       </view>
 
       <view class="card" bindtap='showMachine' data-id="{{machine.id}}">
-        <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
+        <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://images.pexels.com/photos/1321725/pexels-photo-1321725.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
           <view class="card-description">
           <!--machine name -->
             <view class="h2">{{machine.name}}</view>
