--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -1,15 +1,15 @@
 /* pages/show/show.wxss */
 
 .image {
-  height: 35vh;
-  width: 90vw;
+  height: 37vh;
+  width: 100vw;
   background-size: cover !important;
   background-position: center;
   color: white;
   position: relative;
-  border-radius: 6px;
+  /* border-radius: 6px; */
   box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .avatar {
