--- a/pages/main/main.wxss
+++ b/pages/main/main.wxss
@@ -20,9 +20,9 @@
 
 .avatar {
   position: absolute;
-  right: 33px;
-  top: 143px;
-  width: 24%;
+  right: 8vh;
+  top: 24vh;
+  width: 21%;
   height: 39%;
   border-radius: 50%;
   border: 2px solid white;
@@ -34,7 +34,7 @@
   font-size: 20px;
   padding: 10px;
   position: absolute;
-  top: 157px;
+  top: 21vh;
   font-weight: bold;
 }
 
