--- a/pages/booking/booking.wxss
+++ b/pages/booking/booking.wxss
@@ -1,1 +1,111 @@
 /* pages/booking/booking.wxss */
+
+.title {
+  font-size: 22px;
+  color: #1D3557;
+  font-weight: bold;
+  text-align: center;
+  margin: 5vh;
+}
+
+.btn-confirm {
+color:white;
+font-size: 16px;
+background-color: #27AE60;
+border-radius: 18px;
+padding: 1vh;
+margin: 6vh;
+opacity: 0.9;
+font-weight: bold;
+width:39vh;
+margin-top: 7vh;
+}
+
+.summary {
+  /* font-weight: bold; */
+  font-size:18px;
+  color: #092851;
+  width:16vh;
+}
+
+.summary .info {
+   /* border-bottom: 2px solid #F0F0F0; */
+     /* margin: 2vh;
+       margin-left:7vh;
+      margin-right:-1vh; */
+    padding:1vh;
+}
+
+.dates {
+  font-weight: light;
+  font-size:17px;
+  color: #484848;
+  margin-top: 7vh;
+    width:87vw;
+
+}
+
+.dates .info {
+     border-bottom: 2px solid #F0F0F0;
+       margin: 2vh;
+     margin-left:7vh;
+
+
+}
+
+.price .info {
+       border-bottom: 2px solid #F0F0F0;
+         margin: 2vh;
+          margin-left:7vh;
+
+
+}
+
+.price {
+  font-weight: light;
+  font-size:17px;
+  color: #484848;
+  margin-top:7vh;
+    width:88vw;
+
+}
+
+.address {
+     border-bottom: 2px solid #F0F0F0;
+         margin: 2vh;
+font-weight: light;
+  font-size:17px;
+  color: #484848;
+  margin-top:7vh;
+    width:70vw;
+    margin-left:7vh;
+}
+
+.image {
+  height: 17vh;
+  width: 32vw;
+  background-size: cover !important;
+  background-position: center;
+  color: white;
+  border-radius: 13px;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+  margin:3vh;
+  padding-right:5vh;
+}
+
+.purchase-detail {
+  display: flex;
+  align-items: center;
+  margin-left:3vh;
+}
+
+.price .total {
+  font-weight: bold;
+  border-bottom: 2px solid #F0F0F0;
+ margin: 2vh;
+   margin-left:7vh;  
+  font-size:17px;
+  color: #484848;
+  width:71vw;
+
+}
