--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -13,8 +13,8 @@
 }
 
 .avatar {
-  width: 160rpx;
-  height: 160rpx;
+  width: 12vh;
+  height: 12vh;
   border-radius: 50%;
   margin: 20px;
   position: absolute;
